# ml-project-cookiecutter

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  codecov.yml  cookiecutter.json  env.yaml  gen_ref_pages.py  index.html  mkdocs.yml  pyproject.toml
.azure-pipelines/: ci-pipeline.yaml  pr-pipeline.yaml
.github/: dependabot.yaml
.github/workflows/: docs.yaml  pr.yaml  project-creation-checks.yaml  zizmor-sec-check.yaml
contributing/: index.html
docs/: contributing.md  gen_ref_pages.py  guide.md  index.md  license.md
guide/: index.html
hooks/: post_gen_project.py
license/: index.html
search/: search_index.json
tests/: conftest.py  test_project_creation.py
tests/licenses/: Apache 2.0.txt  BSD-3-Clause.txt  Beerware.txt  GLWTS.txt  MIT.txt  Proprietary.txt
{{ cookiecutter.repo_name }}/: .env-sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  env-dev.yaml  env.yaml  mkdocs.yml  pyproject.toml  setup.py
{{ cookiecutter.repo_name }}/.azure-pipelines/: pr-pipeline.yaml
{{ cookiecutter.repo_name }}/.azure-pipelines/jobs/: code-qa.yaml  test-suite.yaml
{{ cookiecutter.repo_name }}/.azure-pipelines/steps/: code-qa.yaml  conda-env-create.yaml  test-suite.yaml  uv-env-create.yaml
{{ cookiecutter.repo_name }}/.github/: ci-env.yaml  dependabot.yaml
{{ cookiecutter.repo_name }}/.github/workflows/: lock-files-update.yaml  zizmor-security-check.yaml
{{ cookiecutter.repo_name }}/docs/: index.md
{{ cookiecutter.repo_name }}/docs/api_ref/: consts.md  core.md  utils.md  {{cookiecutter.src_dir_name}}.consts.md  {{cookiecutter.src_dir_name}}.core.md  {{cookiecutter.src_dir_name}}.utils.md
{{ cookiecutter.repo_name }}/docs/api_ref/core/: configs.md  settings.md
{{ cookiecutter.repo_name }}/docs/dev-logs/: log.md
{{ cookiecutter.repo_name }}/docs/guides/: contributing.md  makefile-usage.md  setup-dev-env.md  tests.md
{{ cookiecutter.repo_name }}/src/{{cookiecutter.package_name}}/consts/: __init__.py  directories.py  training.py
{{ cookiecutter.repo_name }}/src/{{cookiecutter.package_name}}/core/: __init__.py  settings.py
{{ cookiecutter.repo_name }}/src/{{cookiecutter.package_name}}/utils/: __init__.py  logging.py  mlflow.py  serialization.py
{{ cookiecutter.repo_name }}/tests/: conftest.py
{{ cookiecutter.repo_name }}/tests/unit/core/: test_settings.py
{{ cookiecutter.repo_name }}/tests/unit/core/configs/: test_argument_parsing.py  test_config_base.py
{{ cookiecutter.repo_name }}/tests/unit/utils/: test_gpu.py  test_logging.py  test_mlflow.py  test_serialization.py
{{ cookiecutter.repo_name }}/{{cookiecutter.src_dir_name}}/: __init__.py
{{ cookiecutter.repo_name }}/{{cookiecutter.src_dir_name}}/consts/: __init__.py  compute.py  directories.py  logging.py  reproducibility.py
{{ cookiecutter.repo_name }}/{{cookiecutter.src_dir_name}}/core/: settings.py
{{ cookiecutter.repo_name }}/{{cookiecutter.src_dir_name}}/core/configs/: __init__.py  argument_parsing.py  base.py
{{ cookiecutter.repo_name }}/{{cookiecutter.src_dir_name}}/utils/: gpu.py  logging.py  mlflow.py  serialization.py
